--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <h5 class="my-0 mr-md-auto font-weight-normal"> <img src="https://www.hydra-cg.com/img/logo.png" class= "pr-2"width="55px" alt="Hydra CG logo"><a href="https://hydra-cg.com/" style=" text-decoration: none !important; color:black">Python HYDRA</a> </h5>
     <div class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-dark d-none d-md-inline d-xl-inline" href="#inspiration">Our Inspiration</a>
-      <a class="p-2 text-dark  d-none d-md-inline d-xl-inline" href="#hydrus">About Hydrus</a>
+      <a class="p-2 text-dark  d-none d-md-inline d-xl-inline" href="#hydrus">About hydrus</a>
       <a class="p-2 text-dark  d-none d-md-inline d-xl-inline" href="#getting-started">Getting Started</a>
     </div>
     <a class="btn btn-outline-primary d-none d-sm-inline d-md-inline d-xl-inline" href="#ideas">Project Ideas</a>
@@ -43,10 +43,10 @@
     <hr>
     <div class="px-1 py-1 pb-md-4 mx-auto">
       <a class="anchor" id="hydrus"></a>
-      <h1 class="display-4">About Hydrus</h1>
+      <h1 class="display-4">About hydrus</h1>
       <p class="lead  font-weight-normal">
-        Hydrus is a set of Python based tools for easier and efficient creation of Hypermedia driven REST-APIs. Hydrus utilises the power of <a href="https://en.wikipedia.org/wiki/Linked_data">Linked Data</a> to create a powerful REST APIs to serve data.
-        Hydrus uses the <a href="https://www.hydra-cg.com/">Hydra(W3C)</a> standard for creation and documentation of it's APIs.
+        hydrus is a set of Python based tools for easier and efficient creation of Hypermedia driven REST-APIs. hydrus utilises the power of <a href="https://en.wikipedia.org/wiki/Linked_data">Linked Data</a> to create a powerful REST APIs to serve data.
+        hydrus uses the <a href="https://www.hydra-cg.com/">Hydra(W3C)</a> standard for creation and documentation of it's APIs.
       </p>
       <h3>Features</h3>
       <ul class="lead  font-weight-normal">
@@ -60,10 +60,10 @@
       <a class="anchor" id="getting-started"></a>
       <h1 class="display-4">How do I get started ?</h1>
       <p class="lead  font-weight-normal">
-        Getting started is pretty easy. Head over to our <a href="https://www.hydra-cg.com/">community page</a>. There are a lot of demos, presentations, and talks to get you up to speed. Then head over to the <a href="https://github.com/HTTP-APIs/hydrus">Hydrus repo</a>        and clone it. Play with it a little, try to understand how the current implementation works, try to fix some bugs or report any issues you can find <a href="https://github.com/HTTP-APIs/hydrus/issues">here</a>.
+        Getting started is pretty easy. Head over to our <a href="https://www.hydra-cg.com/">community page</a>. There are a lot of demos, presentations, and talks to get you up to speed. Then head over to the <a href="https://github.com/HTTP-APIs/hydrus">hydrus repo</a>        and clone it. Play with it a little, try to understand how the current implementation works, try to fix some bugs or report any issues you can find <a href="https://github.com/HTTP-APIs/hydrus/issues">here</a>.
         <br> Lastly, don't hesitate to reach out in the <a href="https://gitter.im/HTTP-APIs/Lobby" target="_blank">Gitter channel</a> if you have any question, we are very friendly people and we'll be more than happy to help you out.
       </p>
-      <p class="lead  font-weight-normal">As a general entrypoint to understand the repositories, there is the <a href="https://github.com/HTTP-APIs/hydrus/wiki">Hydrus Wiki</a> and related links. Having a clear insight of <a href="https://goo.gl/TCdYG3">Resource Description Framework</a>        is quite necessary, Mentors will give full support to catch up with it.</p>
+      <p class="lead  font-weight-normal">As a general entrypoint to understand the repositories, there is the <a href="https://github.com/HTTP-APIs/hydrus/wiki">hydrus Wiki</a> and related links. Having a clear insight of <a href="https://goo.gl/TCdYG3">Resource Description Framework</a>        is quite necessary, Mentors will give full support to catch up with it.</p>
       <br>
       <div class="faq lead font-weight-normal">
         <h3>FAQ</h3>
