--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,9 @@
         <li>A generic server that can serve required data and metadata(in the form of API documentation) to a client over HTTP.</li>
         <li>A middleware that allows users to use the client to interact with the server using Natural Language which is processed machine consumable language. (under developement)</li>
       </ul>
+      <p class="lead  font-weight-normal">
+        You can read more about the ecosystem we are trying to build in the <a href="https://github.com/HTTP-APIs/hydra-ecosystem-wiki/blob/master/README.md">Wiki</a>.  
+      </p>
     </div>
     <hr>
     <div class="px-1 py-1 pb-md-4 mx-auto">
